--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        2. Navigation : Bloc massif en Vert Canard (#004047).
        3. Typographie : Alliance Playfair Display (élégance) et Inter (force).
        4. Démonstrations : Interface ultra-optimisée. Barre haute affinée (50px).
-       5. Mode Immersion : Système de bascule plein écran qui masque la barre de navigation pour un affichage 100% iframe.
+       5. Mode Immersion : Système de bascule plein écran avec incitation visuelle (flèche clignotante).
   -->
   <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
@@ -111,13 +111,13 @@
       box-shadow: 0 15px 30px -5px rgba(39, 130, 153, 0.4);
     }
 
-    /* --- SECTION DÉMONSTRATIONS : OPTIMISATION MAXIMALE --- */
+    /* --- SECTION DÉMONSTRATIONS --- */
     
     .demo-topbar {
       width: 100%;
       background: var(--dark);
       padding: 0 20px;
-      height: 50px; /* Affinée pour plus de hauteur d'image */
+      height: 50px;
       display: flex;
       align-items: center;
       gap: 15px;
@@ -168,6 +168,20 @@
       font-weight: 900;
       text-transform: uppercase;
       transition: all 0.3s ease;
+    }
+
+    /* Animation pour la flèche d'incitation */
+    @keyframes arrowBlink {
+      0%, 100% { opacity: 1; transform: translateX(0); }
+      50% { opacity: 0.2; transform: translateX(-4px); }
+    }
+
+    .incitation-arrow {
+      color: var(--primary);
+      font-size: 1.2rem;
+      font-weight: bold;
+      animation: arrowBlink 1.2s infinite ease-in-out;
+      user-select: none;
     }
 
     /* Bouton d'agrandissement (Full Screen Toggle) */
@@ -270,7 +284,7 @@
       <div class="max-w-7xl mx-auto px-8 flex justify-between items-center h-full">
         <div class="cursor-pointer flex items-center gap-4" onclick="navigateToPage('home')">
           <img src="https://i.ibb.co/x8m2DyP9/Logo-Nova-360-V2-0.png" alt="Logo" class="h-10 w-auto brightness-0 invert">
-          <span class="text-white font-black tracking-tighter text-xl md:hidden uppercase tracking-widest italic">Nova360</span>
+          <span class="text-white font-black tracking-tighter text-xl md:hidden uppercase tracking-widest italic text-center">Nova360</span>
         </div>
 
         <div class="hidden md:flex space-x-12">
@@ -298,7 +312,7 @@
       <!-- PAGE ACCUEIL -->
       <div id="page-home" class="page active px-8 pt-12 pb-20 lg:pt-20 lg:pb-32 text-center bg-transparent">
         <div class="mb-16">
-            <h1 class="text-3xl md:text-5xl lg:text-7xl font-light leading-tight tracking-tight text-slate-800">
+            <h1 class="text-3xl md:text-5xl lg:text-7xl font-light leading-tight tracking-tight text-slate-800 text-center">
               <span class="font-serif italic text-slate-400 block mb-2 text-center">Un seul endroit</span>
               <span class="font-serif italic text-[#278299] text-5xl md:text-8xl block my-4 underline decoration-[#004047]/10 underline-offset-8 text-center">pour explorer</span>
               <span class="font-black text-xl md:text-3xl lg:text-4xl uppercase tracking-[0.5em] text-[#004047] mt-8 block text-center">tous les autres</span>
@@ -316,18 +330,18 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-12 text-left max-w-7xl mx-auto px-4 mb-32">
             <div class="feature-card p-12 rounded-[2rem] border-t-8 border-[#278299]">
               <div class="text-xs font-black text-[#278299] uppercase tracking-widest mb-6">Technologie 01</div>
-              <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic">Immersion 360°</h3>
-              <p class="text-slate-600 text-sm leading-relaxed font-light">Une précision chirurgicale pour restituer l'âme de vos lieux avec une fidélité absolue.</p>
+              <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic text-left">Immersion 360°</h3>
+              <p class="text-slate-600 text-sm leading-relaxed font-light text-left">Une précision chirurgicale pour restituer l'âme de vos lieux avec une fidélité absolue.</p>
             </div>
             <div class="feature-card p-12 rounded-[2rem] border-t-8 border-[#004047]">
               <div class="text-xs font-black text-[#004047] uppercase tracking-widest mb-6">Usage 02</div>
-              <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic">Multi-supports</h3>
-              <p class="text-slate-600 text-sm leading-relaxed font-light">Expérience optimisée pour mobile et desktop. Sans téléchargement.</p>
+              <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic text-left">Multi-supports</h3>
+              <p class="text-slate-600 text-sm leading-relaxed font-light text-left">Une expérience optimisée pour mobile et desktop. Sans téléchargement.</p>
             </div>
             <div class="feature-card p-12 rounded-[2rem] border-t-8 border-[#315a97]">
               <div class="text-xs font-black text-[#315a97] uppercase tracking-widest mb-6">Vision 03</div>
-              <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic">Conversion</h3>
-              <p class="text-slate-600 text-sm leading-relaxed font-light">Transformez la curiosité en acte d'achat grâce à nos outils intégrés.</p>
+              <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic text-left">Conversion</h3>
+              <p class="text-slate-600 text-sm leading-relaxed font-light text-left">Transformez la curiosité en acte d'achat grâce à nos outils intégrés.</p>
             </div>
         </div>
       </div>
@@ -348,9 +362,12 @@
             <button onclick="changeDemo('https://filedn.eu/ltnoVzjomRBHzYirJIqOwRu/NovaVisio/Tourisme/C%C3%B4te%20du%20Midi/OdT%20-%20Port-La-Nouvelle/output/index.html', this)" class="demo-item-btn">🏖️ Tourisme</button>
           </nav>
 
-          <!-- Bouton Agrandir -->
-          <div onclick="toggleImmersion(true)" class="expand-btn" title="Mode Immersion">
-            ⛶
+          <!-- Incitation visuelle : flèche + bouton agrandir -->
+          <div class="flex items-center gap-3 pl-4 border-l border-white/10">
+            <span class="incitation-arrow">➤</span>
+            <div onclick="toggleImmersion(true)" class="expand-btn" title="Passer en plein écran">
+              ⛶
+            </div>
           </div>
         </div>
 
@@ -398,7 +415,6 @@
       btnElement.classList.add('active');
     }
 
-    // Bascule du mode Immersion
     function toggleImmersion(active) {
       const demoPage = document.getElementById('page-demo');
       if (active) {
@@ -414,7 +430,6 @@
       const mainNav = document.getElementById('main-nav');
       const footer = document.getElementById('main-footer');
       
-      // Sortir du mode immersion si on change de page
       toggleImmersion(false);
 
       if (targetPage) {
