Update text and button links in index.html

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <div class="feature-card p-12 rounded-[2rem] border-t-8 border-[#315a97]">
               <div class="text-xs font-black text-[#315a97] uppercase tracking-widest mb-6">Vision 03</div>
               <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic text-left">Conversion</h3>
-              <p class="text-slate-600 text-sm leading-relaxed font-light text-left">Transformez la curiosité en acte d'achat grâce à nos outils intégrés.</p>
+              <p class="text-slate-600 text-sm leading-relaxed font-light text-left">Transformez la curiosité en acte d'achat grâce à nos outils interactifs intégrés.</p>
             </div>
         </div>
       </div>
@@ -404,7 +404,7 @@
           <nav class="demo-nav-scroll">
             <button onclick="changeDemo('https://filedn.eu/ltnoVzjomRBHzYirJIqOwRu/NovaVisio/D%C3%A9mos/Actif/11100%20-%20Tandoori%20Flame/output/index.html', this)" class="demo-item-btn active">🍽️ Restaurants</button>
             <button onclick="changeDemo('https://filedn.eu/ltnoVzjomRBHzYirJIqOwRu/NovaVisio/Professionnels/11100%20-%20Gym%20City/output/index.html', this)" class="demo-item-btn">🎯 Activités</button>
-            <button onclick="changeDemo('https://filedn.eu/ltnoVzjomRBHzYirJIqOwRu/NovaVisio/Air%20B%27n%27B/11130%20-%20Sigean%20-%20Les%203%20Anges%20 de%20Sigean/output/index.html', this)" class="demo-item-btn">🏡 Hébergements</button>
+            <button onclick="changeDemo('https://filedn.eu/ltnoVzjomRBHzYirJIqOwRu/NovaVisio/Domaines%20%26%20Ch%C3%A2teaux/11100%20-%20Narbonne%20-%20Ch%C3%A2teau%20Jonqui%C3%A8res/output/index.html', this)" class="demo-item-btn">🏡 Hébergements</button>
             <button onclick="changeDemo('https://filedn.eu/ltnoVzjomRBHzYirJIqOwRu/NovaVisio/Professionnels/11100%20-%20Le%20Petit%20Bouchon/output/index.html', this)" class="demo-item-btn">🛍️ Shopping</button>
             <button onclick="changeDemo('https://filedn.eu/ltnoVzjomRBHzYirJIqOwRu/NovaVisio/Professionnels/11100%20-%20Coworking%20les%20barques/output/index.html', this)" class="demo-item-btn">💼 Pros</button>
             <button onclick="changeDemo('https://filedn.eu/ltnoVzjomRBHzYirJIqOwRu/NovaVisio/Tourisme/C%C3%B4te%20du%20Midi/OdT%20-%20Port-La-Nouvelle/output/index.html', this)" class="demo-item-btn">🏖️ Tourisme</button>
